# HC-Wacom

./: Cargo.toml  README.md
hc/: Cargo.toml
hc/src/: main.rs  path.rs  robot.rs  window.rs
hc/src/strings/: en_US.rs  mod.rs  pt_BR.rs
hc/src/window/: area.rs  bitmap.rs  manager.rs  mod.rs  selector.rs
stu/: Cargo.toml
stu-sys/: Cargo.toml  build.rs
stu-sys/src/: lib.rs
stu/src/: error.rs  handle.rs  lib.rs  report.rs
tool/: Cargo.toml
tool/src/: main.rs
