[package]
name = "hc"
version = "0.1.0"
edition = "2018"

[dependencies]
stu = { path = "../stu" }
nwg = { package = "native-windows-gui", version = "1" }
nwd = { package = "native-windows-derive", version = "1" }

thiserror = "1"

[dependencies.winapi]
version = "0.3"
features = [
    "impl-debug",
    "basetsd",
    "windef",
    "winuser",
    "wingdi",
    "errhandlingapi"
]

[dependencies.image]
version = "0"
default-features = false
features = [
    "bmp",
    "jpeg",
    "jpeg_rayon",
    "png"
]

[features]
lang-en_US = []
lang-pt_BR = []
default = ["lang-pt_BR"]
